--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: swift
 os: osx
-osx_image: xcode8.3
+osx_image: xcode9.0
 before_install:
 script:
   - xcodebuild clean -scheme Graph | xcpretty
-  - xcodebuild -project Graph.xcodeproj -scheme Graph -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.3' | xcpretty
-  
+  - xcodebuild -project Graph.xcodeproj -scheme Graph -destination 'name=Generic iOS Device' | xcpretty
